--- a/index.html
+++ b/index.html
@@ -40,26 +40,34 @@
       <div class="col s12 m6 l6">
         <h1>Datos</h1>
         <div class="divider"></div>
-        <form>
+        <form id="formulario">
           <div class="input-field col s12 l6">
-            <input type="text" id="nombres" class="validate">
+            <input type="text" id="nombres">
             <label for="nombres">Nombres</label>
           </div>
           <div class="input-field col s12 l6">
-            <input type="text" id="apellidos" class="validate">
+            <input type="text" id="apellidos">
             <label for="apellidos">Apellidos</label>
           </div>
           <div class="input-field col s12">
-            <input type="text" id="carnet" class="validate">
-            <label for="carnet"># de Carnet</label>
+            <input type="text" id="cargo">
+            <label for="cargo">Cargo</label>
           </div>
           <div class="input-field col s12">
-            <input type="text" id="carrera" class="validate">
-            <label for="carrera">Carrera</label>
+            <input type="text" id="inss">
+            <label for="inss">INSS</label>
           </div>
           <div class="input-field col s12">
-            <input type="text" id="carrera" class="validate">
-            <label for="carrera">Año</label>
+            <input type="text" id="cedula">
+            <label for="cedula">Cédula</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text" id="direccion">
+            <label for="direccion">Dirección</label>
+          </div>
+          <div class="input-field col s12">
+            <input type="text" id="ruc">
+            <label for="ruc">Ruc</label>
           </div>
           <div class="file-field col s12 input-field">
             <div class="btn red">
@@ -71,13 +79,12 @@
             </div>
           </div>
           <br><br><br><br>
-          <button class="btn waves-effect waves-light blue" type="submit" name="action">Generar
+          <button class="btn waves-effect waves-light blue" type="submit" id="generar">Generar
             <i class="material-icons right">send</i>
           </button>
-          <button class="right btn waves-effect waves-light green" type="submit" name="action">Cargar
-            <i class="material-icons right">accessibility</i>
-          </button>
+
         </form>
+
       </div>
 
 
@@ -88,27 +95,30 @@
         <div class="row content">
           <div class="card" id="imagen-carnet">
             <div class="firstinfo">
-              <div class="avatar" id="cargas" style="background-image: url('img/imagen.jpg')"></div>
+              <div class="avatar" id="cargas" style="background-image: url('img/miavatar.png')"></div>
               <div class="marca-de-agua">
                 <img src="img/logo.png" alt="">
               </div>
               <div class="profileinfo">
-                <h1>Teddy José</h1>
-                <h1>Solis Duarte</h1>
-                <h3>Instructor de deportes</h3>
+                <h1 id="d_nombres"></h1>
+                <h1 id="d_apellidos"></h1>
+                <h3 id="d_cargo"></h3>
                 <hr>
-                <h6>Datos:</h6>
-                <hr>
-                <p class="bio">302574</p>
-                <p class="bio">121-140980-0001J</p>
-                <p class="bio">Del Bar Central 3c al norte y 1/2c al este. Juigalpa, Chontales</p>
-                <p class="pie">UNAN FAREM Chontales <br> <span>A la libertad por la Universidad!</span> </p>
+                <p class="leyenda">INSS:</p>
+                <p class="bio" id="d_inss"> </p>
+                <p class="leyenda">Cédula:</p>
+                <p class="bio" id="d_cedula"></p>
+                <p class="leyenda">Dirección:</p>
+                <p class="bio" id="d_direccion"> </p>
+                <p class="pie">¡A la libertad por la Universidad!</p>
 
               </div>
             </div>
           </div>
         </div>
 
+        <button class="waves-effect waves-light green" id="limpiar"><i class="material-icons">delete</i>
+        </button>
         <a href="" id="descargar-carnet" class="center btn waves-effect waves-light purple"><i class="material-icons right">add_a_photo</i>Descargar</a>
         <button class="right btn waves-effect waves-light gray" type="submit" name="action" id="preview">Preview
           <i class="material-icons right">camera_front</i>
@@ -123,51 +133,8 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/html2canvas.min.js"></script>
   <script src="js/materialize.min.js"></script>
+  <script src="js/app.js"></script>
 
-  <script>
-    $("document").ready(function () {
-
-      //Para el input
-      var inputFile = document.getElementById('dato_img');
-      inputFile.addEventListener('change', mostrarImagen, false);
-
-      function mostrarImagen(event) {
-        var file = event.target.files[0];
-        var reader = new FileReader();
-        reader.onload = function (event) {
-          $('#cargas').css('background-image', 'url(' + event.target.result + ')');
-        }
-        reader.readAsDataURL(file);
-      }
-
-
-      var aimprimir = $("#imagen-carnet");
-      var vista_imagen;
-
-      $(".button-collapse").sideNav();
-      $('.scrollspy').scrollSpy({
-        scrollOffset: 80,
-      });
-      $('.slider').slider({ indicators: false, height: 320 });
-
-      $("#preview").on('click', function () {
-        html2canvas(document.querySelector("#imagen-carnet")).then(canvas => {
-          $("#vista").append(canvas);
-          vista_imagen = canvas;
-        });
-      });
-
-
-      $("#descargar-carnet").on('click', function () {
-        var imgageData = vista_imagen.toDataURL("image/jpg");
-        var newData = imgageData.replace(/^data:image\/jpg/, "data:application/octet-stream");
-        $("#descargar-carnet").attr("download", "your_pic_name.jpg").attr("href", newData);
-      });
-
-
-
-    });
-  </script>
 </body>
 
 </html>
