--- a/index.html
+++ b/index.html
@@ -104,22 +104,27 @@
                 <h1 id="d_apellidos"></h1>
                 <h3 id="d_cargo"></h3>
                 <hr>
-                <p class="leyenda">INSS:</p>
-                <p class="bio" id="d_inss"> </p>
-                <p class="leyenda">Cédula:</p>
-                <p class="bio" id="d_cedula"></p>
-                <p class="leyenda">Dirección:</p>
-                <p class="bio" id="d_direccion"> </p>
+                <div class="bio">
+                  <p class="leyenda">INSS:</p>
+                  <p class="bio" id="d_inss"> </p>
+                  <p class="leyenda">Cédula:</p>
+                  <p class="bio" id="d_cedula"></p>
+                  <p class="leyenda">Dirección:</p>
+                  <div class="dir">
+                    <p class="bio" id="d_direccion"> </p>
+                  </div>
+                </div>
                 <p class="pie">¡A la libertad por la Universidad!</p>
+
 
               </div>
             </div>
           </div>
         </div>
 
-        <button class="waves-effect waves-light green" id="limpiar"><i class="material-icons">delete</i>
+        <button class="waves-effect waves-light green" id="limpiar"><i class="white-text material-icons">delete</i>
         </button>
-        <a href="" id="descargar-carnet" class="center btn waves-effect waves-light purple"><i class="material-icons right">add_a_photo</i>Descargar</a>
+        <a id="descargar-carnet" class="center btn waves-effect waves-light purple"><i class="material-icons right">add_a_photo</i>Descargar</a>
         <button class="right btn waves-effect waves-light gray" type="submit" name="action" id="preview">Preview
           <i class="material-icons right">camera_front</i>
         </button>
