--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                     <p class="bio" id="d_direccion"> </p>
                   </div>
                 </div>
-                <p class="pie">¡A la libertad por la Universidad!</p>
+                <img class="firma pie" src="img/firma.png" alt="">
+
 
 
               </div>
